--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "discord.js-commando": "github:discordjs/Commando",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
